--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application'%>
     <%= javascript_pack_tag 'index' %>
+    <%= favicon_link_tag asset_path('icon.svg') %>
   </head>
 
   <body>
